# shirc

./: .cvsignore  .gitignore  AUTHORS  Makefile.am  README  bootstrap  configure.ac
src/: .cvsignore  .gitignore  Makefile.am  callback.sh.in  fifo.sh.in  ignore.sh.in  irc.sh.in  messages.sh.in  shirc.in  shirc.sh.in  shircbot.in  state.sh.in  text.sh.in
